fair bit done but accelerometer not working on mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title> Accelerometer Game </title>
 </head>
 <body>
-    <h1 id="points">Score: 0</h1>
+    <h1 id="points">Score: 100</h1>
     <hr>
     <div id="gameDiv">
 
@@ -25,21 +25,21 @@
             </tr>
             <tr id="xRow">
                 <td>x</td>
-                <td id="xTarget"></td>
-                <td id="xObserved"></td>
-                <td id="xDifference"></td>
+                <td id="xTarget">0</td>
+                <td id="xObserved">0</td>
+                <td id="xDifference">0</td>
             </tr>
             <tr id="yRow">
                 <td>y</td>
-                <td id="yTarget"></td>
-                <td id="yObserved"></td>
-                <td id="yDifference"></td> 
+                <td id="yTarget">0</td>
+                <td id="yObserved">0</td>
+                <td id="yDifference">0</td> 
             </tr>
             <tr id="zRow">
                 <td>z</td>
-                <td id="zTarget"></td>
-                <td id="zObserved"></td>
-                <td id="zDifference"></td>
+                <td id="zTarget">0</td>
+                <td id="zObserved">0</td>
+                <td id="zDifference">0</td>
             </tr>
         </table>
 
